--- a/tutorial07/CMakeLists.txt
+++ b/tutorial07/CMakeLists.txt
@@ -16,11 +16,11 @@ set(CMAKE_C_STANDARD 99)
 ##
 # Adds tutorial07.c executable target.
 ##
-add_executable(tutorial07 tutorial07.c)
+add_executable(tutorial07 tutorial07-original.c)
 
 ##
 # Adds include directories to be used when compiling and libraries to be used when
 # linking target tutorial07.
 ##
-target_include_directories(tutorial07 PRIVATE ${FFMPEG_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
-target_link_libraries(tutorial07 PRIVATE ${FFMPEG_LIBRARIES} ${SDL2_LIBRARIES} m)
+target_include_directories(tutorial07 PRIVATE ${FFMPEG_INCLUDE_DIRS} ${SDL_INCLUDE_DIRS})
+target_link_libraries(tutorial07 PRIVATE ${FFMPEG_LIBRARIES} ${SDL_LIBRARIES} m)
